--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/Profile_Picture.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  First description # UMBC Undergraduate Student 
   <br><br>
   Second description 
   <br><br>
