--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/Profile_Picture.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description # UMBC Undergraduate Student 
+  University of Maryland, Baltimore County Undergraduate Student 
   <br><br>
-  Second description 
+  Environmental Science and Geography Major 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
