--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/Profile_Picture.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  University of Maryland, Baltimore County Undergraduate student obtaining a degree in Environmental Science and Geography anticipating 
-  to graduate in Spring of 2020
+  University of Maryland, Baltimore County undergraduate student obtaining a degree in Environmental Science and Geography anticipating 
+  to graduate in Spring of 2020 with a current GPA of 3.40
   <br><br>
-  Environmental Science and Geography Major GPA: 3.40
+  Experience with:
+  GIS
+  Environmental Sampling 
+  Field Surverying 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
