--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/selfie.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  University of Maryland, Baltimore County undergraduate student obtaining a degree in Environmental Science and Geography anticipating 
-  to graduate in Spring of 2020 with a current GPA of 3.40
-  <br><br>
+  University of Maryland, Baltimore County
+  <br>
+  Environmental Science and Geography Major
+  <br>
+  Anticipating to graduate in the Spring of 2020 
+  <br>
+  GPA:3.40
+  <br>
   Experience with:
   GIS, Environmental Sampling,and Ecological Field Surverying 
   <br><br>
