--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ logo: "/images/selfie.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   University of Maryland, Baltimore County
   <br>
-  Environmental Science and Geography Major
+  Environmental Science & Geography Major
   <br>
-  Anticipating to graduate in the Spring of 2020 
+  Graduating in the Spring of 2020 
   <br>
   GPA:3.40
   <br>
