--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ logo: "/images/selfie.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   University of Maryland, Baltimore County
   <br>
-  Environmental Science & Geography Major
+  Environmental Science & Geography 
   <br>
   Graduating in the Spring of 2020 
   <br>
-  GPA:3.40
+  GPA: 3.40
   <br>
   Experience with:
   GIS, Environmental Sampling,and Ecological Field Surverying 
