--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/selfie.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Undergraduate student at The University of Maryland, Baltimore County
+  Undergraduate student at the University of Maryland, Baltimore County
   <br>
   Environmental Science & Geography 
   <br>
