--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Taylor Coho # your name (or website title) here
 logo: "/images/selfie.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Studying Geography and Environmental Systems at the Univeristy of Maryland, Baltimore County. Anticipating to graduate in the Spring of 2020 with a current GPA of 3.40
+  Studying Geography and Environmental Systems at the University of Maryland, Baltimore County. Anticipating to graduate in the Spring of 2020 with a current GPA of 3.40
   <br>
   Experience with:
-  GIS, Environmental Sampling, and Ecological Field Surverying 
+  GIS, Environmental Sampling, and Ecological Field Surveying 
   <br><br>
   
   
